// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization Team Edit view Edit Team Name functionality 7395561: renders Team Name Modal without crashing 1`] = `
.emotion-0 {
  margin-left: 0;
}

.emotion-1 {
  padding-left: 0;
}

.emotion-7 {
  width: 100vw;
  margin-left: -32px;
  padding-left: 0;
}

.emotion-7 .admin-organizations {
  margin-bottom: 32px;
}

.emotion-7 .entity-table .nui-table .ag-body-viewport {
  min-height: auto;
}

<div
  class="nui-modal_container"
  id="TeamEditTeamNameModal"
>
  <header
    class="nui-modal_header"
  >
    <div
      class="nui-modal_title-container"
    >
      <div
        class="nui-modal_badge"
      >
        <i
          class="q4i-team-2pt"
          id="TeamEditTeamNameModalBadgeIcon"
        />
      </div>
      <div
        class="nui-modal_language"
      >
        <h2
          class="nui-modal_title"
          id="TeamEditTeamNameModalTitle"
        >
          Edit Team
        </h2>
      </div>
    </div>
    <div
      class="nui-modal_action-container"
    >
      <div
        aria-label="Close Modal"
        class="nui-modal_exit"
        id="TeamEditTeamNameModalExitButton"
        role="button"
      >
        <i
          class="ni-close-4pt"
          id="TeamEditTeamNameModalExitIcon"
        />
      </div>
    </div>
  </header>
  <div
    class="nui-modal_content"
  >
    <div
      class="nui-scrollbars nui-scrollbars--dark"
      data-simplebar="init"
      id="TeamEditTeamNameModalScrollbars"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="0"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="nui-modal_children"
                  id="TeamEditTeamNameModalChildren"
                >
                  <div
                    class="nui-spinner nui-spinner--citrus nui-spinner--fixed nui-spinner--masked nui-solid--done"
                  >
                    <div
                      class="nui-spinner_pulse"
                    />
                    <div
                      class="nui-spinner_mask nui-spinner_mask--subtle"
                    />
                  </div>
                  <div
                    class="nui-grid emotion-0"
                  >
                    <div
                      class="nui-grid_col emotion-1 nui-grid_col--1-of-1"
                    >
                      <div
                        class="nui-grid emotion-0"
                      >
                        <h2
                          class="nui-text nui-text--v1"
                        >
                          Edit Team • Test & Co, Inc. • Mining
                        </h2>
                      </div>
                      <div
                        class="nui-grid emotion-0"
                      >
                        <span
                          class="nui-text nui-text--v1"
                        >
                          Select organizations this team manages.
                        </span>
                      </div>
                    </div>
                    <div
                      class="nui-grid_col emotion-1 nui-grid_col--1-of-4 nui-grid_col--medium-1-of-3 nui-grid_col--small-1-of-2"
                    >
                      <div
                        class="nui-grid emotion-0"
                        id="TeamEditTeamNameModalField"
                      >
                        <div
                          class="nui-grid_col emotion-1 nui-grid_col--1-of-1"
                        >
                          <div
                            class="nui-field nui-field--light"
                            id="TeamEditTeamNameModalFieldNameField"
                          >
                            <label
                              class="nui-field_label"
                              id="TeamEditTeamNameModalFieldNameFieldLabel"
                            >
                              <span
                                class="nui-text nui-field_label-text nui-field_label-text--pseudo-text nui-field_label-text--required nui-field_label-text--truncate nui-text--light-slate nui-text--v1"
                              >
                                Team Name
                              </span>
                              <span
                                class="nui-field_label-text--hidden"
                              >
                                Required
                              </span>
                              <div
                                class="nui-field_children"
                              >
                                <div
                                  class="nui-textbox nui-textbox--light-grey nui-textbox--default"
                                  id="TeamEditTeamNameModalFieldNameTextbox"
                                >
                                  <input
                                    class="nui-textbox_input"
                                    id="TeamEditTeamNameModalFieldNameTextboxInput"
                                    maxlength="255"
                                    placeholder=""
                                    type="text"
                                    value="Mining"
                                  />
                                  <span
                                    class="nui-textbox_focus"
                                    id="TeamEditTeamNameModalFieldNameTextboxFocus"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="nui-grid_col edit-team-name-form emotion-7 nui-grid_col--1-of-1"
                    >
                      <div
                        class="admin-organizations"
                        id="TeamEditTeamNameModalNameFormOrgTable"
                      >
                        <div
                          class="entity-table entity-table--loading"
                          id="TeamEditTeamNameModalNameFormOrgTableEntityTable"
                        >
                          <div
                            class="nui-collapsable nui-collapsable--vertical"
                          >
                            <div
                              class="nui-collapsable_content"
                            >
                              <div
                                class="nui-collapsable_opacity-layer"
                              >
                                <section
                                  class="nui-toolbar entity-table_toolbar nui-toolbar--q4-blue nui-toolbar--v1"
                                  id="TeamEditTeamNameModalNameFormOrgTableEntityTableToolbar"
                                >
                                  <div
                                    class="nui-toolbar_inner"
                                  >
                                    <div
                                      class="nui-toolbar_row nui-toolbar_row--justify-space-between"
                                      data-type="toolbar-row"
                                      id="TeamEditTeamNameModalNameFormOrgTableEntityTableToolbarAutoRow"
                                    >
                                      <div
                                        class="nui-toolbar_group entity-table_toolbar-group nui-toolbar_group--default"
                                        data-type="toolbar-group"
                                      >
                                        <h2
                                          class="nui-text entity-table_title nui-text--v1"
                                        >
                                          Organizations
                                        </h2>
                                        <div
                                          class="entity-table_toolbar-actions"
                                        >
                                          <button
                                            class="nui-button nui-button--disabled nui-button--v1"
                                            disabled=""
                                            id="TeamEditTeamNameModalNameFormEditOrgButton"
                                            type="button"
                                          >
                                            <span
                                              class="nui-button_label"
                                              id="TeamEditTeamNameModalNameFormEditOrgButtonLabel"
                                            >
                                              Manage Organizations
                                            </span>
                                          </button>
                                        </div>
                                        <div
                                          class="entity-table_search"
                                        >
                                          <div
                                            class="nui-search nui-search--steel nui-search--empty"
                                            id="TeamEditTeamNameModalNameFormOrgTableEntityTableSearch"
                                          >
                                            <div
                                              class="nui-search_inner"
                                            >
                                              <div
                                                class="nui-search_icon"
                                                id="TeamEditTeamNameModalNameFormOrgTableEntityTableSearchIcon"
                                              >
                                                <i
                                                  class="ni-search-4pt"
                                                />
                                              </div>
                                              <input
                                                aria-label="Search"
                                                class="nui-search_input"
                                                id="TeamEditTeamNameModalNameFormOrgTableEntityTableSearchInput"
                                                name="value"
                                                placeholder="Search"
                                                value=""
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                          <div
                            class="nui-swapable"
                          >
                            <div
                              class="nui-swapable_layer nui-solid--done"
                            >
                              <div
                                class="entity-table_content"
                              >
                                <div
                                  class="nui-table ag-theme-balham entity-table_table nui-table--auto-height nui-table--default"
                                  id="TeamEditTeamNameModalNameFormOrgTableEntityTableTable"
                                >
                                  <div
                                    class="nui-swapable"
                                  >
                                    <div
                                      class="nui-swapable_layer nui-solid--done"
                                    >
                                      <div
                                        class="nui-spinner nui-spinner--rain nui-spinner--masked"
                                      >
                                        <div
                                          class="nui-spinner_pulse"
                                        />
                                        <div
                                          class="nui-spinner_mask nui-spinner_mask--subtle"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="admin-user-table"
                        id="TeamEditTeamNameModalNameFormUsersTable"
                      >
                        <div
                          class="entity-table entity-table--loading"
                          id="TeamEditTeamNameModalNameFormUsersTableEntityTable"
                        >
                          <div
                            class="nui-collapsable nui-collapsable--vertical"
                          >
                            <div
                              class="nui-collapsable_content"
                            >
                              <div
                                class="nui-collapsable_opacity-layer"
                              >
                                <section
                                  class="nui-toolbar entity-table_toolbar nui-toolbar--q4-blue nui-toolbar--v1"
                                  id="TeamEditTeamNameModalNameFormUsersTableEntityTableToolbar"
                                >
                                  <div
                                    class="nui-toolbar_inner"
                                  >
                                    <div
                                      class="nui-toolbar_row nui-toolbar_row--justify-space-between"
                                      data-type="toolbar-row"
                                      id="TeamEditTeamNameModalNameFormUsersTableEntityTableToolbarAutoRow"
                                    >
                                      <div
                                        class="nui-toolbar_group entity-table_toolbar-group nui-toolbar_group--default"
                                        data-type="toolbar-group"
                                      >
                                        <h2
                                          class="nui-text entity-table_title nui-text--v1"
                                        >
                                          Users
                                        </h2>
                                        <div
                                          class="entity-table_toolbar-actions"
                                        >
                                          <button
                                            class="nui-button nui-button--disabled nui-button--v1"
                                            disabled=""
                                            id="TeamEditTeamNameModalNameFormEditUsersButton"
                                            type="button"
                                          >
                                            <span
                                              class="nui-button_label"
                                              id="TeamEditTeamNameModalNameFormEditUsersButtonLabel"
                                            >
                                              Manage Users
                                            </span>
                                          </button>
                                        </div>
                                        <div
                                          class="entity-table_search"
                                        >
                                          <div
                                            class="nui-search nui-search--steel nui-search--empty"
                                            id="TeamEditTeamNameModalNameFormUsersTableEntityTableSearch"
                                          >
                                            <div
                                              class="nui-search_inner"
                                            >
                                              <div
                                                class="nui-search_icon"
                                                id="TeamEditTeamNameModalNameFormUsersTableEntityTableSearchIcon"
                                              >
                                                <i
                                                  class="ni-search-4pt"
                                                />
                                              </div>
                                              <input
                                                aria-label="Search"
                                                class="nui-search_input"
                                                id="TeamEditTeamNameModalNameFormUsersTableEntityTableSearchInput"
                                                name="value"
                                                placeholder="Search"
                                                value=""
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                          <div
                            class="nui-swapable"
                          >
                            <div
                              class="nui-swapable_layer nui-solid--done"
                            >
                              <div
                                class="entity-table_content"
                              >
                                <div
                                  class="nui-table ag-theme-balham entity-table_table nui-table--auto-height nui-table--default"
                                  id="TeamEditTeamNameModalNameFormUsersTableEntityTableTable"
                                >
                                  <div
                                    class="nui-swapable"
                                  >
                                    <div
                                      class="nui-swapable_layer nui-solid--done"
                                    >
                                      <div
                                        class="nui-spinner nui-spinner--rain nui-spinner--masked"
                                      >
                                        <div
                                          class="nui-spinner_pulse"
                                        />
                                        <div
                                          class="nui-spinner_mask nui-spinner_mask--subtle"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
  <section
    class="nui-toolbar nui-modal_footer nui-toolbar--slate nui-toolbar--v1"
  >
    <div
      class="nui-toolbar_inner"
    >
      <div
        class="nui-toolbar_row nui-toolbar_row--justify-flex-end"
        data-type="toolbar-row"
      >
        <button
          class="nui-button nui-button--cherry nui-button--large nui-button--wide nui-button--disabled nui-button--v1"
          disabled=""
          id="TeamEditTeamNameModalRemove"
          type="button"
        >
          <span
            class="nui-button_label"
            id="TeamEditTeamNameModalRemoveLabel"
          >
            Remove Team
          </span>
        </button>
        <button
          class="nui-button nui-button--citrus nui-button--large nui-button--wide nui-button--disabled nui-button--v1"
          disabled=""
          id="TeamEditTeamNameModalSave"
          type="button"
        >
          <span
            class="nui-button_label"
            id="TeamEditTeamNameModalSaveLabel"
          >
            Save Team
          </span>
        </button>
      </div>
    </div>
  </section>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`Organization Team Edit view Manage Organizations functionality 7395562: renders Edit Team Organizations Modal without crashing 1`] = `
.emotion-0 {
  margin-left: 0;
}

.emotion-1 {
  padding-left: 0;
}

.emotion-6 .nui-checkbox_box.nui-toggle-input-base_control {
  background: #ffffff;
}

.emotion-6 .nui-select_option-checkbox {
  margin: auto;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 38px;
  outline: 0!important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
}

.emotion-8:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-10 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-11 {
  margin: 0;
  padding-bottom: 0;
  padding-top: 0;
  visibility: visible;
  color: inherit;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-13 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

<div
  class="nui-modal_container"
  id="TeamEditOrgsModal"
>
  <header
    class="nui-modal_header"
  >
    <div
      class="nui-modal_title-container"
    >
      <div
        class="nui-modal_badge"
      >
        <i
          class="q4i-team-2pt"
          id="TeamEditOrgsModalBadgeIcon"
        />
      </div>
      <div
        class="nui-modal_language"
      >
        <h2
          class="nui-modal_title"
          id="TeamEditOrgsModalTitle"
        >
          Edit Team
        </h2>
      </div>
    </div>
    <div
      class="nui-modal_action-container"
    >
      <div
        aria-label="Close Modal"
        class="nui-modal_exit"
        id="TeamEditOrgsModalExitButton"
        role="button"
      >
        <i
          class="ni-close-4pt"
          id="TeamEditOrgsModalExitIcon"
        />
      </div>
    </div>
  </header>
  <div
    class="nui-modal_content"
  >
    <div
      class="nui-scrollbars nui-scrollbars--dark"
      data-simplebar="init"
      id="TeamEditOrgsModalScrollbars"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="0"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="nui-modal_children"
                  id="TeamEditOrgsModalChildren"
                >
                  <div
                    class="nui-grid emotion-0"
                  >
                    <div
                      class="nui-grid_col emotion-1 nui-grid_col--1-of-1"
                    >
                      <div
                        class="nui-grid emotion-0"
                      >
                        <h2
                          class="nui-text nui-text--v1"
                        >
                          Edit Team • Test & Co, Inc. • Mining
                        </h2>
                      </div>
                      <div
                        class="nui-grid emotion-0"
                      >
                        <span
                          class="nui-text nui-text--v1"
                        >
                          Select organizations this team manages.
                        </span>
                      </div>
                    </div>
                    <div
                      class="nui-grid_col emotion-1 nui-grid_col--1-of-4 nui-grid_col--medium-1-of-3 nui-grid_col--small-1-of-2"
                    >
                      <div
                        class="nui-grid emotion-0"
                        id="TeamEditOrgsModalSelector"
                      >
                        <div
                          class="nui-field organizations-link_organizations nui-field--light"
                          id="TeamEditOrgsModalSelectorOrganizationsField"
                        >
                          <div
                            class="nui-field_children"
                          >
                            <span
                              class="nui-text nui-text--v1"
                            >
                              Managed Organizations
                            </span>
                            <div
                              class="nui-select emotion-6 nui-select--light-grey nui-select--default emotion-7"
                              id="TeamEditOrgsModalSelectorOrganizationsSelect"
                            >
                              <div
                                class="add-organizations-dropdown nui-select__control emotion-8"
                              >
                                <div
                                  class="add-organizations-dropdown nui-select__value-container add-organizations-dropdown nui-select__value-container--is-multi add-organizations-dropdown nui-select__value-container--has-value emotion-9"
                                >
                                  <div
                                    class="add-organizations-dropdown nui-select__placeholder emotion-10"
                                  >
                                    Select
                                  </div>
                                  <div
                                    class="emotion-11"
                                  >
                                    <div
                                      class="add-organizations-dropdown nui-select__input"
                                      style="display: inline-block;"
                                    >
                                      <input
                                        aria-autocomplete="list"
                                        autocapitalize="none"
                                        autocomplete="off"
                                        autocorrect="off"
                                        id="TeamEditOrgsModalSelectorOrganizationsSelectInput"
                                        spellcheck="false"
                                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                                        tabindex="0"
                                        type="text"
                                        value=""
                                      />
                                      <div
                                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                                      />
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="add-organizations-dropdown nui-select__indicators emotion-12"
                                >
                                  <span
                                    class="add-organizations-dropdown nui-select__indicator-separator emotion-13"
                                  />
                                  <div
                                    class="nui-select__indicator nui-select__indicator--dropdown"
                                    style="transform: rotate(0deg);"
                                  >
                                    <i
                                      class="ni-arrow-down-4pt"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="nui-chips"
                          id="TeamEditOrgsModalSelectorOrganizationsChips"
                        >
                          <div
                            class="nui-chip nui-chip--light-grey"
                            id="TeamEditOrgsModalSelectorOrganizationsChips0Item"
                          >
                            <div
                              class="nui-chip_label"
                              id="TeamEditOrgsModalSelectorOrganizationsChips0ItemLabel"
                            >
                              UGI Corporation | ABX
                            </div>
                            <i
                              class="nui-chip_icon ni-close-4pt"
                              id="TeamEditOrgsModalSelectorOrganizationsChips0ItemIcon"
                              tabindex="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
  <section
    class="nui-toolbar nui-modal_footer nui-toolbar--slate nui-toolbar--v1"
  >
    <div
      class="nui-toolbar_inner"
    >
      <div
        class="nui-toolbar_row nui-toolbar_row--justify-flex-end"
        data-type="toolbar-row"
      >
        <button
          class="nui-button nui-button--citrus nui-button--large nui-button--wide nui-button--v1"
          id="TeamEditOrgsModalUpdate"
          type="button"
        >
          <span
            class="nui-button_label"
            id="TeamEditOrgsModalUpdateLabel"
          >
            Update Organizations
          </span>
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Organization Team Edit view Manage Users functionality 7395563: renders Edit Team Users Modal without crashing 1`] = `
.emotion-0 {
  margin-left: 0;
}

.emotion-1 {
  padding-left: 0;
}

.emotion-4 {
  width: 100vw;
  margin-left: -32px;
  padding-left: 0;
}

.emotion-4 .admin-organizations {
  margin-bottom: 32px;
}

.emotion-4 .entity-table .nui-table .ag-body-viewport {
  min-height: auto;
}

<div
  class="nui-modal_container"
  id="TeamEditUsersModal"
>
  <header
    class="nui-modal_header"
  >
    <div
      class="nui-modal_title-container"
    >
      <div
        class="nui-modal_badge"
      >
        <i
          class="q4i-team-2pt"
          id="TeamEditUsersModalBadgeIcon"
        />
      </div>
      <div
        class="nui-modal_language"
      >
        <h2
          class="nui-modal_title"
          id="TeamEditUsersModalTitle"
        >
          Edit Team
        </h2>
      </div>
    </div>
    <div
      class="nui-modal_action-container"
    >
      <div
        aria-label="Close Modal"
        class="nui-modal_exit"
        id="TeamEditUsersModalExitButton"
        role="button"
      >
        <i
          class="ni-close-4pt"
          id="TeamEditUsersModalExitIcon"
        />
      </div>
    </div>
  </header>
  <div
    class="nui-modal_content"
  >
    <div
      class="nui-scrollbars nui-scrollbars--dark"
      data-simplebar="init"
      id="TeamEditUsersModalScrollbars"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="0"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="nui-modal_children"
                  id="TeamEditUsersModalChildren"
                >
                  <div
                    class="nui-grid emotion-0"
                  >
                    <div
                      class="nui-grid_col emotion-1 nui-grid_col--1-of-1"
                    >
                      <div
                        class="nui-grid emotion-0"
                      >
                        <h2
                          class="nui-text nui-text--v1"
                        >
                          Edit Team • Test & Co, Inc. • Mining
                        </h2>
                      </div>
                      <div
                        class="nui-grid emotion-0"
                      >
                        <span
                          class="nui-text nui-text--v1"
                        >
                          Select the users you want to provide organization access to. Users may belong to more than one team.
                        </span>
                      </div>
                    </div>
                    <div
                      class="nui-grid_col emotion-4 nui-grid_col--1-of-1"
                    >
                      <div
                        class="add-users-teams-form"
                        id="TeamEditUsersModalForm"
                      >
                        <div
                          class="admin-user-table"
                          id="TeamEditUsersModalFormTable"
                        >
                          <div
                            class="entity-table"
                            id="TeamEditUsersModalFormTableEntityTable"
                          >
                            <div
                              class="nui-collapsable nui-collapsable--vertical"
                            >
                              <div
                                class="nui-collapsable_content"
                              >
                                <div
                                  class="nui-collapsable_opacity-layer"
                                >
                                  <section
                                    class="nui-toolbar entity-table_toolbar nui-toolbar--q4-blue nui-toolbar--v1"
                                    id="TeamEditUsersModalFormTableEntityTableToolbar"
                                  >
                                    <div
                                      class="nui-toolbar_inner"
                                    >
                                      <div
                                        class="nui-toolbar_row nui-toolbar_row--justify-space-between"
                                        data-type="toolbar-row"
                                        id="TeamEditUsersModalFormTableEntityTableToolbarAutoRow"
                                      >
                                        <div
                                          class="nui-toolbar_group entity-table_toolbar-group nui-toolbar_group--default"
                                          data-type="toolbar-group"
                                        >
                                          <h2
                                            class="nui-text entity-table_title nui-text--v1"
                                          >
                                            All users
                                          </h2>
                                          <div
                                            class="entity-table_toolbar-actions"
                                          />
                                          <div
                                            class="entity-table_search"
                                          >
                                            <div
                                              class="nui-search nui-search--steel nui-search--empty"
                                              id="TeamEditUsersModalFormTableEntityTableSearch"
                                            >
                                              <div
                                                class="nui-search_inner"
                                              >
                                                <div
                                                  class="nui-search_icon"
                                                  id="TeamEditUsersModalFormTableEntityTableSearchIcon"
                                                >
                                                  <i
                                                    class="ni-search-4pt"
                                                  />
                                                </div>
                                                <input
                                                  aria-label="Search"
                                                  class="nui-search_input"
                                                  id="TeamEditUsersModalFormTableEntityTableSearchInput"
                                                  name="value"
                                                  placeholder="Search"
                                                  value=""
                                                />
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </section>
                                </div>
                              </div>
                            </div>
                            <div
                              class="nui-swapable"
                            >
                              <div
                                class="nui-swapable_layer nui-solid--done"
                              >
                                <div
                                  class="entity-table_content"
                                >
                                  <div
                                    class="nui-table ag-theme-balham entity-table_table nui-table--auto-height nui-table--default"
                                    id="TeamEditUsersModalFormTableEntityTableTable"
                                  >
                                    <div
                                      class="nui-swapable"
                                    >
                                      <div
                                        class="nui-swapable_layer nui-solid--done"
                                      >
                                        <div
                                          class="nui-spinner nui-spinner--rain nui-spinner--masked"
                                        >
                                          <div
                                            class="nui-spinner_pulse"
                                          />
                                          <div
                                            class="nui-spinner_mask nui-spinner_mask--subtle"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar simplebar-visible"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
  <section
    class="nui-toolbar nui-modal_footer nui-toolbar--slate nui-toolbar--v1"
  >
    <div
      class="nui-toolbar_inner"
    >
      <div
        class="nui-toolbar_row nui-toolbar_row--justify-flex-end"
        data-type="toolbar-row"
      >
        <button
          class="nui-button nui-button--citrus nui-button--large nui-button--wide nui-button--v1"
          id="TeamEditUsersModalUpdate"
          type="button"
        >
          <span
            class="nui-button_label"
            id="TeamEditUsersModalUpdateLabel"
          >
            Update Users
          </span>
        </button>
      </div>
    </div>
  </section>
</div>
`;
